# redish

./: Redish.cabal
src/: Main.hs  Redish.hs
test/: RedishSpec.hs
